src/components/ElectorateFinder/styles.scss
.root {
  position: relative;
  margin: 0.5rem 0;
  font-size: 1rem;
  height: 2.125rem;
}

.map {
  display: none;
}

.inner {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  border: 0.0625rem solid #bbb;
  border-radius: 0.375rem;
  width: 100%;
  background-color: #f9f9f9;
}

.open {
  box-shadow: 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.15);
}

.search {
  position: relative;

  &::before {
    content: '';
    position: absolute;
    top: 0.5rem;
    left: 0.5rem;
    width: 1.125rem;
    height: 1.125rem;
    background-image: url(./search.svg);
    background-repeat: no-repeat;
    background-size: 100%;
  }
}

.input {
  margin: 0.25rem;
  border: 0;
  padding: 0.375rem 1.75rem 0.25rem;
  width: calc(100% - 0.5rem);
  font-family: ABCSans, Helvetica, Arial, sans-serif;
  font-size: 0.8125rem;
  line-height: 0.875rem;
  background-color: inherit;

  &::-ms-clear {
    display: none;
  }
}

.clear {
  position: absolute;
  top: 0.5625rem;
  right: 0.5625rem;
  margin: 0;
  border: 0;
  padding: 0;
  width: 0.875rem;
  height: 0.875rem;
  background-color: transparent;
  background-image: url(./clear.svg);
  background-repeat: no-repeat;
  background-size: 100%;

  .inner:not(.open) & {
    display: none;
  }
}

.results {
  margin: 0 0.5rem;
  padding: 0;
  list-style: none;
}

.result {
  margin: 0;
  padding: 0.5rem 0;
  background: none !important;

  & + & {
    border-top: 0.0625rem solid #bbb;
  }

  > button {
    border: none;
    padding: 0.25rem 1.5rem;
    width: 100%;
    background: transparent;
    text-align: left;
    font-family: ABCSerif, 'Book Antiqua', 'Palatino Linotype', Palatino, serif;
    font-size: 0.875rem;
    cursor: pointer;

    & > small {
      margin-left: 0.5rem;
      font-family: ABCSans, Helvetica, Arial, sans-serif;
      font-size: 0.6875rem;
    }
  }
}

